{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 568,
  "lineage": "dc3205f7-03a4-17f0-90c6-c2c6a7ae15b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:internet-gateway/igw-06891d5be51831e28",
            "id": "igw-06891d5be51831e28",
            "owner_id": "284908758499",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:loadbalancer/app/alb/781fd677feff3057",
            "arn_suffix": "app/alb/781fd677feff3057",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-802795067.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:loadbalancer/app/alb/781fd677feff3057",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cc5dcc1cc5b33c78",
              "sg-0ee0d7eb5ca2618ed"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-044b9cfb49820c5ec"
              },
              {
                "subnet_id": "subnet-04cade512f6249b19"
              }
            ],
            "subnets": [
              "subnet-044b9cfb49820c5ec",
              "subnet-04cade512f6249b19"
            ],
            "vpc_id": "vpc-0d2c9b46cc6b89e45",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public-1a",
            "aws_subnet.public-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-443-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:listener/app/alb/781fd677feff3057/7c3f6d7db306de66",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:284908758499:certificate/380c26be-627e-4b4a-9317-7c5f9c03786f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:targetgroup/ecs-tg/992daf355a8bba11",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:listener/app/alb/781fd677feff3057/7c3f6d7db306de66",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:loadbalancer/app/alb/781fd677feff3057",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.ecs-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public-1a",
            "aws_subnet.public-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-80-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:listener/app/alb/781fd677feff3057/7409c9ffd12c498c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:listener/app/alb/781fd677feff3057/7409c9ffd12c498c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:loadbalancer/app/alb/781fd677feff3057",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_security_group.alb-sg",
            "aws_subnet.public-1a",
            "aws_subnet.public-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alb-to-api-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:targetgroup/ecs-8070-tg/440da13989bdea3c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:listener-rule/app/alb/781fd677feff3057/7c3f6d7db306de66/7cf71a9e0ac7034a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:listener-rule/app/alb/781fd677feff3057/7c3f6d7db306de66/7cf71a9e0ac7034a",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:listener/app/alb/781fd677feff3057/7c3f6d7db306de66",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_listener.alb-443-listner",
            "aws_lb_target_group.ecs-8070-tg",
            "aws_lb_target_group.ecs-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public-1a",
            "aws_subnet.public-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs-8070-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:targetgroup/ecs-8070-tg/440da13989bdea3c",
            "arn_suffix": "targetgroup/ecs-8070-tg/440da13989bdea3c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:targetgroup/ecs-8070-tg/440da13989bdea3c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-8070-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:targetgroup/ecs-tg/992daf355a8bba11",
            "arn_suffix": "targetgroup/ecs-tg/992daf355a8bba11",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:284908758499:targetgroup/ecs-tg/992daf355a8bba11",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06891d5be51831e28",
            "id": "r-rtb-04daa3b3c97f810a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04daa3b3c97f810a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:route-table/rtb-00e0d87a73b8ebd9d",
            "id": "rtb-00e0d87a73b8ebd9d",
            "owner_id": "284908758499",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-1a"
            },
            "tags_all": {
              "Name": "private-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:route-table/rtb-00548779c4dde642d",
            "id": "rtb-00548779c4dde642d",
            "owner_id": "284908758499",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-1c"
            },
            "tags_all": {
              "Name": "private-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:route-table/rtb-04daa3b3c97f810a9",
            "id": "rtb-04daa3b3c97f810a9",
            "owner_id": "284908758499",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06891d5be51831e28",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b023a334a702ab67",
            "route_table_id": "rtb-00e0d87a73b8ebd9d",
            "subnet_id": "subnet-0109604a4b32bbd3e"
          },
          "dependencies": [
            "aws_route_table.private-1a",
            "aws_subnet.private-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0872a6ef427edfa88",
            "route_table_id": "rtb-00548779c4dde642d",
            "subnet_id": "subnet-0b8afa73913b06bdf"
          },
          "dependencies": [
            "aws_route_table.private-1c",
            "aws_subnet.private-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d85b555018642a1",
            "route_table_id": "rtb-04daa3b3c97f810a9",
            "subnet_id": "subnet-04cade512f6249b19"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c76f95b3f9e3cb99",
            "route_table_id": "rtb-04daa3b3c97f810a9",
            "subnet_id": "subnet-044b9cfb49820c5ec"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:security-group/sg-0cc5dcc1cc5b33c78",
            "description": "sg for alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc5dcc1cc5b33c78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231229231819554900000006",
            "name_prefix": "terraform-",
            "owner_id": "284908758499",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:security-group/sg-033356a00cec000aa",
            "description": "sg for ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033356a00cec000aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8070,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8070
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20231229231819553500000005",
            "name_prefix": "terraform-",
            "owner_id": "284908758499",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-sg"
            },
            "tags_all": {
              "Name": "ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-link-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:security-group/sg-0d40a6633a6517cd7",
            "description": "sg for private link",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d40a6633a6517cd7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033356a00cec000aa"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20231229231821155500000008",
            "name_prefix": "terraform-",
            "owner_id": "284908758499",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-link-sg"
            },
            "tags_all": {
              "Name": "private-link-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:subnet/subnet-0109604a4b32bbd3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0109604a4b32bbd3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "284908758499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1a"
            },
            "tags_all": {
              "Name": "private-1a"
            },
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:subnet/subnet-0b8afa73913b06bdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8afa73913b06bdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "284908758499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1c"
            },
            "tags_all": {
              "Name": "private-1c"
            },
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:subnet/subnet-04cade512f6249b19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cade512f6249b19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "284908758499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1a"
            },
            "tags_all": {
              "Name": "public-1a"
            },
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:subnet/subnet-044b9cfb49820c5ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044b9cfb49820c5ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "284908758499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1c"
            },
            "tags_all": {
              "Name": "public-1c"
            },
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:vpc/vpc-0d2c9b46cc6b89e45",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2c429a5b22a33de",
            "default_route_table_id": "rtb-0c2d251269e87c32c",
            "default_security_group_id": "sg-0ee0d7eb5ca2618ed",
            "dhcp_options_id": "dopt-044813eb3c2e41f17",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d2c9b46cc6b89e45",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2d251269e87c32c",
            "owner_id": "284908758499",
            "tags": {
              "Name": "imported-vpc"
            },
            "tags_all": {
              "Name": "imported-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr-api-ep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:vpc-endpoint/vpce-0faf74f400282817f",
            "dns_entry": [
              {
                "dns_name": "vpce-0faf74f400282817f-j5nmwz3w.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0faf74f400282817f-j5nmwz3w-ap-northeast-1c.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0faf74f400282817f-j5nmwz3w-ap-northeast-1a.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "api.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02885202VHVOKTDWH6UC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0faf74f400282817f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05c46431fd7e286e1",
              "eni-0992ce2bc0ad287a0"
            ],
            "owner_id": "284908758499",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d40a6633a6517cd7",
              "sg-0ee0d7eb5ca2618ed"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0109604a4b32bbd3e",
              "subnet-0b8afa73913b06bdf"
            ],
            "tags": {
              "Name": "ecr-api-ep"
            },
            "tags_all": {
              "Name": "ecr-api-ep"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "dependencies": [
            "aws_security_group.ecs-sg",
            "aws_security_group.private-link-sg",
            "aws_subnet.private-1a",
            "aws_subnet.private-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr-dkr-ep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:vpc-endpoint/vpce-070644f72f4443fe5",
            "dns_entry": [
              {
                "dns_name": "vpce-070644f72f4443fe5-v5k5l1v1.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-070644f72f4443fe5-v5k5l1v1-ap-northeast-1c.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-070644f72f4443fe5-v5k5l1v1-ap-northeast-1a.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02885821QNOVJQMIBK2U"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02885821QNOVJQMIBK2U"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-070644f72f4443fe5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02e2c5e050a7a27f3",
              "eni-0e1f4abf758dec0cd"
            ],
            "owner_id": "284908758499",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d40a6633a6517cd7",
              "sg-0ee0d7eb5ca2618ed"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0109604a4b32bbd3e",
              "subnet-0b8afa73913b06bdf"
            ],
            "tags": {
              "Name": "ecr-dkr-ep"
            },
            "tags_all": {
              "Name": "ecr-dkr-ep"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "dependencies": [
            "aws_security_group.ecs-sg",
            "aws_security_group.private-link-sg",
            "aws_subnet.private-1a",
            "aws_subnet.private-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs-ep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:vpc-endpoint/vpce-008707b3cb7c9dd1b",
            "dns_entry": [
              {
                "dns_name": "vpce-008707b3cb7c9dd1b-ms67yju5.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-008707b3cb7c9dd1b-ms67yju5-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-008707b3cb7c9dd1b-ms67yju5-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0320811YZ9EXAX4ADWK"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-008707b3cb7c9dd1b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06c78b7e5363e2f0d",
              "eni-0c9e9ee00f707ea6a"
            ],
            "owner_id": "284908758499",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d40a6633a6517cd7",
              "sg-0ee0d7eb5ca2618ed"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-0109604a4b32bbd3e",
              "subnet-0b8afa73913b06bdf"
            ],
            "tags": {
              "Name": "logs-ep"
            },
            "tags_all": {
              "Name": "logs-ep"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "dependencies": [
            "aws_security_group.ecs-sg",
            "aws_security_group.private-link-sg",
            "aws_subnet.private-1a",
            "aws_subnet.private-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3-ep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:vpc-endpoint/vpce-0977ce1a71e5a4164",
            "cidr_blocks": [
              "52.219.195.0/24",
              "3.5.152.0/21",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.0.0/20",
              "52.219.162.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.68.0/22",
              "52.219.172.0/22"
            ],
            "id": "vpce-0977ce1a71e5a4164",
            "owner_id": "284908758499",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00548779c4dde642d",
              "rtb-00e0d87a73b8ebd9d",
              "rtb-04daa3b3c97f810a9",
              "rtb-0c2d251269e87c32c"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "s3-ep"
            },
            "tags_all": {
              "Name": "s3-ep"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "dependencies": [
            "aws_route_table.private-1a",
            "aws_route_table.private-1c",
            "aws_route_table.public-rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secret-manager-ep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:vpc-endpoint/vpce-0c7846f5e758b9fe5",
            "dns_entry": [
              {
                "dns_name": "vpce-0c7846f5e758b9fe5-17jj2jde.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c7846f5e758b9fe5-17jj2jde-ap-northeast-1c.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c7846f5e758b9fe5-17jj2jde-ap-northeast-1a.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "secretsmanager.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0353218TIS37UL0CATW"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c7846f5e758b9fe5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-002e60a4d6130ef3d",
              "eni-0c9de3324f48d3b39"
            ],
            "owner_id": "284908758499",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d40a6633a6517cd7",
              "sg-0ee0d7eb5ca2618ed"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.secretsmanager",
            "state": "available",
            "subnet_ids": [
              "subnet-0109604a4b32bbd3e",
              "subnet-0b8afa73913b06bdf"
            ],
            "tags": {
              "Name": "secret-manager-ep"
            },
            "tags_all": {
              "Name": "secret-manager-ep"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "dependencies": [
            "aws_security_group.ecs-sg",
            "aws_security_group.private-link-sg",
            "aws_subnet.private-1a",
            "aws_subnet.private-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm-ep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:284908758499:vpc-endpoint/vpce-0d3a4ef2f3632a5f4",
            "dns_entry": [
              {
                "dns_name": "vpce-0d3a4ef2f3632a5f4-u79z0f6p.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d3a4ef2f3632a5f4-u79z0f6p-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d3a4ef2f3632a5f4-u79z0f6p-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0219289TQS2ZZMXMUVP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d3a4ef2f3632a5f4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0320bd47da17006a3",
              "eni-0549f82783914fb0b"
            ],
            "owner_id": "284908758499",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d40a6633a6517cd7",
              "sg-0ee0d7eb5ca2618ed"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-0109604a4b32bbd3e",
              "subnet-0b8afa73913b06bdf"
            ],
            "tags": {
              "Name": "ssm-ep"
            },
            "tags_all": {
              "Name": "ssm-ep"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d2c9b46cc6b89e45"
          },
          "dependencies": [
            "aws_security_group.ecs-sg",
            "aws_security_group.private-link-sg",
            "aws_subnet.private-1a",
            "aws_subnet.private-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}